dropdown, extra donate button, image in config

--- a/about.html
+++ b/about.html
@@ -299,7 +299,7 @@ categories: about
 
 
 <div id="footer">
-    <div class="container align-items-lg-center">
+    <div class="align-items-lg-center">
         <div class="content-container">
             <div class="subtitle pt-4 pb-4">
                 <span class="eng lang-text active">
@@ -313,16 +313,24 @@ categories: about
                 <span class="eng lang-text active">Be a part of our mission!</span>
                 <span class="span lang-text">¡Únete a Nuestra Misión!</span>
             </div>
-            <div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-space-evenly">
-                <a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
+            <div class="donate-container about d-flex flex-column flex-xl-row align-items-center justify-content-xl-space-evenly">
+                <a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate btn-margin">
                     <span class="lang-text eng active">
-                        Donate
+                        Donate Funds
                     </span>
                     <span class="lang-text span">
-                        Donar
+                        Donar Fondos
                     </span>
                 </a>
-                <a target="_blank" href="https://bit.ly/BAM-sign-up" class="donate">
+                <a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm" class="donate">
+                    <span class="lang-text eng active">
+                        Donate Item
+                    </span>
+                    <span class="lang-text span">
+                        Donar Artículo
+                    </span>
+                </a>
+                <a target="_blank" href="https://bit.ly/BAM-sign-up" class="donate btn-margin">
                     <span class="lang-text eng active">
                         Volunteer
                     </span>
