--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ categories: home
 				</div>
 				<p class="text pb-3">
 					<span class="eng lang-text active">
-						We offer food assistance and access to essential items like feminine products, soap, diapers, and baby food. We make referrals to organizations we trust can support you in legal support, housing assistance, medical assistance, and more.
+						We offer food assistance and access to essential items like menstrual products, soap, diapers, and baby food. We make referrals to organizations we trust can support you in legal support, housing assistance, medical assistance, and more.
 					</span>
 					<span class="span lang-text">
 						Ofrecemos asistencia de víveres y acceso a artículos esenciales como productos femeninos, jabón, pañales, y comida para bebés. También ofrecemos referencias a otras organizaciones en las cuales confiamos que puedan brindar apoyo legal, médico, asistencia de vivienda, entre otras necesidades.
@@ -252,13 +252,21 @@ categories: home
 						Dona a Bushwick Ayuda Mutua
 					</span>
 				</div>
-				<div class="donate-container d-flex">
-					<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate">
+				<div class="donate-container d-flex flex-column flex-lg-row align-items-center justify-content-lg-center">
+					<a target="_blank" href="https://opencollective.com/bushwick-ayuda-mutua" class="donate donate-funds">
 						<span class="lang-text eng active">
-							Donate
+							Donate Funds
 						</span>
 						<span class="lang-text span">
-							Donar
+							Donar Fondos
+						</span>
+					</a>
+					<a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm" class="donate">
+						<span class="lang-text eng active">
+							Donate Item
+						</span>
+						<span class="lang-text span">
+							Donar Artículo
 						</span>
 					</a>
 				</div>
