changing donate item link

--- a/about.html
+++ b/about.html
@@ -322,7 +322,7 @@ categories: about
                         Donar Fondos
                     </span>
                 </a>
-                <a target="_blank" href="https://airtable.com/shr0fgKfWUXTYyzEm" class="donate">
+                <a target="_blank" href="https://bit.ly/big-bam-donation" class="donate">
                     <span class="lang-text eng active">
                         Donate Item
                     </span>
