--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@ categories: home
 			<div class="text-container">
 				<div class="title pb-3">
 					<span class="lang-text eng active">
-						Sign up to <a class="underline" target="_blank" href="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD">volunteer</a>
+						Sign up to <a class="underline" href="/volunteer/">volunteer</a>
 					</span>
 					<span class="lang-text span">
-						Como inscribirse como <a class="underline" target="_blank" href="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD">voluntarie</a>
+						Como inscribirse como <a class="underline" href="/volunteer/">voluntarie</a>
 					</span>
 				</div>
 				<p class="text pb-3">
@@ -138,7 +138,7 @@ categories: home
 					</span>
 				</p>
 				<div class="link">
-					<a target="_blank" href="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD">
+					<a href="/volunteer/">
 						<span class="lang-text eng active">Get Involved</span>
 						<span class="lang-text span">Involúcrate</span>
 						<div class="arrow">{% include arrowSVG.html %}</div>
