add loading gif, delete unused data objects

--- a/donate-item.html
+++ b/donate-item.html
@@ -5,6 +5,6 @@ permalink: /donate-item/
 ---
 
 <div class="mini-extensions-form">
-    <iframe src="https://app.miniextensions.com/form/dpw4HthtVmD5MosNim9V" allowfullscreen></iframe>
+    <iframe class="mini-extensions-iframe" src="https://app.miniextensions.com/form/dpw4HthtVmD5MosNim9V" allowfullscreen></iframe>
 </div>
 
