--- a/volunteer.html
+++ b/volunteer.html
@@ -5,6 +5,6 @@ permalink: /volunteer/
 ---
 
 <div class="mini-extensions-form">
-    <iframe src="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD" allowfullscreen></iframe>
+    <iframe class="mini-extensions-iframe" src="https://app.miniextensions.com/form/0oO8aCDBmvgHkxlnfPTD" allowfullscreen></iframe>
 </div>
 
