added calendar links to homepage and nav

--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@ categories: home
 						<div class="arrow">{% include arrowSVG.html %}</div>
 					</a>
 				</div>
+				<div class="learn-more link">
+					<a href="/calendar">
+						<span class="eng lang-text active">Calendar</span>
+						<span class="span lang-text">Calendario</span>
+						<div class="arrow">{% include arrowSVG.html %}</div>
+					</a>
+				</div>
 			</div>
 		</div>
 	</div>
