--- a/onboarding.html
+++ b/onboarding.html
@@ -7,7 +7,7 @@ layout: default
 	<div class="d-lg-flex header-container">
 		<div class="container d-lg-flex align-items-lg-center" id="header_pane">
 			<div class="content-container">
-				<div class="title">BAMk</br>Onboarding Kit</div>
+				<div class="title">BAM</br>Onboarding Kit</div>
 				<div class="subtitle pt-3 pb-4">
 				<span>Use the Google Translate toggle to read this in your preferred language</span>
 					</div>
