--- a/onboarding.html
+++ b/onboarding.html
@@ -5,11 +5,11 @@ categories: onboarding
 ---
 
 <div id="onboarding">
-	<div class="container">
+	<div class="container d-lg-flex align-items-lg-center">
 		<div class="content-container">
 			<div class="title">BAM<br>Onboarding Kit</div>
 			<div class="subtitle pt-3 pb-4">
-				<p>Use the Google Translate toggle to read this in your preferred language</p>
+				<span>Use the Google Translate toggle to read this in your preferred language</span>
 			</div>
 
 			<!--BEGING GOOGLE TRANSLATE SCRIPT-->
@@ -50,7 +50,7 @@ categories: onboarding
 						<li><a href="">Decision Making Strategies</a></li>
 						<li><a href="">Discretionary Spending Protocols</a>
 							<ol>
-								<li><a href="">Operations Spending</a>li>
+								<li><a href="">Operations Spending</a></li>
 								<li><a href="">Food Spending</a></li>
 								<li><a href="">Essential Goods Spending</a></li>
 								<li><a href="">Social Services Spending</a></li>
