--- a/onboarding.html
+++ b/onboarding.html
@@ -109,9 +109,9 @@ categories: onboarding
 								<li><a href="http://bit.ly/bam-egnotes" target="_blank">BAM EG Rolling Notes Doc</a></li>
 								<li><a href="http://bit.ly/bam-eg-process" target="_blank">BAM EG Process Doc</a> (for everything but furniture &amp; large appliances, includes <a href="http://bit.ly/bam-eg-packlist" target="_blank">packing lists</a>)</li>
 								<li><a href="http://bit.ly/mm-bam-buyingguide" target="_blank">BAM x MM Buying Guide</a> (vetted cheapest options for eg items)</li>
-								<li><a href="http://bit.ly/ropachidas" target="_blank">BAM EG Production Schedule</a> (appts + run of show)</li>
+								<li>BAM EG Production Schedule (appts + run of show)</li>
 								<li>BAM Furniture Process Doc (furniture &amp; large appliances)</li>
-								<li><a href="http://bit.ly/precisionmovers" target="_blank">BAM Furniture Production Schedule</a> (appts + run of show)</li>
+								<li>BAM Furniture Production Schedule (appts + run of show)</li>
 							</ul>
 						</li>
 						<li>Social Services: currently maintains group chat only, no docs</li>
