--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ categories: home
 					<div class="arrow">{% include arrowSVG.html %}</div>
 				</a>
 			</div>
-			<div class="learn-more link">
+			<div class="calendar link">
 				<a href="/calendar">
 					<span class="eng lang-text active">Calendar</span>
 					<span class="span lang-text">Calendario</span>
