points of unity complete

--- a/about.html
+++ b/about.html
@@ -211,98 +211,200 @@ categories: about
                     </div>
                 </div>
 
-                <!-- Values -->
+                <!-- Points of Unity -->
                 <div class="drop-section">
                     <div class="head d-flex">
                         <div class="title font-grif-bold pt-3 pb-3 pt-lg-5 pb-lg-5">
                             <span class="eng lang-text active">
-                                Values
+                                Points of Unity
                             </span>
                             <span class="span lang-text">
-                                Nuestros Valores
+                                Puntos De Unidad
                             </span>
                         </div>
 
-                        <span class="toggle-icon plus-img collapsed" data-toggle="collapse" href="#values"
+                        <span class="toggle-icon plus-img collapsed" data-toggle="collapse" href="#points-of-unity"
                             aria-expanded="false"></span>
 
                     </div>
 
-                    <div id="values" class="collapse about-content">
-                        <p class="pb-2">
-                            <span class="eng lang-text active">
-                                We are:
-                            </span>
-                            <span class="span lang-text">
-                                Somos
-                            </span>
-                        </p>
-                        <ul>
+                    <div id="points-of-unity" class="collapse about-content">
+                        <ol>
                             <li>
                                 <p>
                                     <span class="eng lang-text active">
-                                        <span style="font-weight:bold">Democratically-run</span> - Decentralized,
-                                        horizontal model where decision-making is collective.
+                                           <span style="font-weight:bold;">We are a Bushwick-based organization of community members, 
+                                            formed at the onset of the COVID-19 pandemic in 2020. </span> Our work began with regular 
+                                            distributions of groceries to folks in need and has expanded to distributions of other
+                                            essentials and forms of support.
                                     </span>
                                     <span class="span lang-text">
-                                        <span style="font-weight:bold">Tramitamos de una manera democrática</span> -
-                                        Seguimos un modelo horizontal y descentralizado donde todas las decisiones son
-                                        tomadas colectivamente.
+                                        <span style="font-weight:bold;">Somos una organización compuesta por miembros de la comunidad, 
+                                            basada en Bushwick y formada al comienzo de la pandemia de COVID-19 en 2020. </span>
+                                        Nuestro trabajo comenzó con distribuciones regulares de alimentos a miembres de la comunidad 
+                                        y se ha expandido a distribuciones de otros bienes esenciales y otras formas de apoyo.
                                     </span>
                                 </p>
                             </li>
                             <li>
                                 <p>
                                     <span class="eng lang-text active">
-                                        <span style="font-weight:bold;">Inclusion, diversity and
-                                            anti-discrimination</span> - We are anti-racist, anti-ableist, anti-sexist,
-                                        anti-homophobic, anti-transphobic, anti-xenophobic, anti-ageist, anti-classist,
-                                        and anti-fatphobic. Our efforts are towards autonomy and accessibility, and our
-                                        priority is providing accessibility to those left furthest from it. We stand
-                                        with the Black community of Bushwick and those working towards police abolition.
+                                        <span style="font-weight:bold;">The redistribution of food and other essential resources alleviate
+                                        the effects of systemic oppression, but they cannot defeat it.</span> What we’ve done met specific 
+                                        material needs, but didn’t undo the forces that manufactured those needs. 
+                                        For example: distributions can feed folks, but don’t inherently change what pushes folks to hunger. 
+                                        We recognize the limitations of this work. However, we also understand these distributions 
+                                        have been a vector for the most important tool in our arsenal - <span style="font-weight:bold;">
+                                        organizing our communities.</span>
                                     </span>
                                     <span class="span lang-text">
-                                        <span style="font-weight:bold">Inclusión, diversidad y
-                                            anti-discriminación</span> - Somos anti-racistas, anti-capacitistas,
-                                        anti-transfobicos, anti-xenofobicos, anti-discriminación por edad,
-                                        anti-clasistas, y somos anti-fobicos debido a la gordura/obesidad. Estamos
-                                        enfocados en promover acceso y autonomía a la comunidad, y nuestra prioridad es
-                                        proporcionar acceso a aquelles que han sido marginalizades. Estamos con la
-                                        comunidad afrodescendiente de Bushwick y a quienes trabajan por la abolición de
-                                        la policía.
+                                        <span style="font-weight:bold;">La redistribución de alimentos y otros bienes esenciales ayuda 
+                                        a aliviar los efectos de la opresión sistémica, pero no la pueden derrotar.</span>
+                                        El trabajo que hacemos ayuda a satisfacer necesidades materiales específicas, pero no deshace las fuerzas que producen esas necesidades. 
+                                        Por ejemplo, las distribuciones alimentan a la gente, pero no necesariamente eliminan lo que causa el hambre. 
+                                        Reconocemos las limitaciones de este trabajo. 
+                                        Sin embargo, también entendemos que estas distribuciones 
+                                        son una oportunidad para desarrollar nuestra herramienta más importante: 
+                                        <span style="font-weight:bold;">la organización de nuestras comunidades. </span>
                                     </span>
                                 </p>
                             </li>
                             <li>
                                 <p>
                                     <span class="eng lang-text active">
-                                        <span style="font-weight:bold;">Culturally-sensitive</span> - We believe that no
-                                        one is illegal on stolen land. This is a space where all languages, sexual
-                                        orientation, genders, and races should have a voice.
+                                        <span style="font-weight:bold;">We are organizing for autonomy in our community and others like it.</span>
+                                        Autonomy is defined as sustained, universal access to the resources we need to survive
+                                        on the terms of those making and receiving those resources.
                                     </span>
                                     <span class="span lang-text">
-                                        <span style="font-weight:bold;">Culturalmente-sensibles</span> - Creemos que
-                                        nadie es considerado ilegal en una tierra robada. Este es un espacio donde todos
-                                        los idiomas, orientaciones sexuales, géneros, y razas son bienvenidos y tienen
-                                        el derecho de ser oídes y valorades.
+                                        <span style="font-weight:bold;">Nos organizamos por la autonomía de nuestra 
+                                        comunidad y otras parecidas.</span> La autonomía se define como el acceso
+                                        universal y duradero a los recursos que necesitamos para sobrevivir,
+                                        de acuerdo con las condiciones y los deseos de aquelles que producen, reciben y usan esos recursos. 
                                     </span>
                                 </p>
                             </li>
                             <li>
                                 <p>
                                     <span class="eng lang-text active">
-                                        <span style="font-weight:bold;">Equity</span> - We believe in not just equality,
-                                        but EQUITY. We thoughtfully uplift the voices that need to be heard, in place of
-                                        the ones often and only heard.
+                                        <span style="font-weight:bold;">We are organizing against the forces 
+                                        that obstruct the realization of our autonomy.</span>
+                                        These forces take many forms, but are rooted in <span style="font-weight:bold;">white supremacy</span> 
+                                        and <span style="font-weight:bold;">capitalist imperialism.</span>
                                     </span>
                                     <span class="span lang-text">
-                                        <span style="font-weight:bold;">Equidad</span> - Creemos no solamente en la
-                                        igualdad, pero también en EQUIDAD. Queremos elevar aquelles voces que necesitan
-                                        ser oídas en lugar de las que siempre tienen la oportunidad de serlo.
+                                        <span style="font-weight:bold;">Nos estamos organizando en contra de los poderes que obstruyen
+                                        la concreción y realización de nuestra autonomía.</span>
+                                        Estos poderes toman muchas formas, pero tienen sus raíces en
+                                        <span style="font-weight:bold;">la supremacía blanca</span> y 
+                                        <span style="font-weight:bold;">el imperialismo capitalista.</span>
                                     </span>
                                 </p>
                             </li>
-                        </ul>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">To secure our autonomy, we need to put an end to our necessities’
+                                        status as commodities and affirm their access as a right.</span>
+                                        Under capitalist imperialism, these resources are made 
+                                        inaccessible through capital and without consideration for our collective health.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Para asegurar nuestra autonomía, 
+                                        hay que poner un fin a la compra y venta (mercantilización) de nuestras necesidades; 
+                                        en cambio, debemos afirmar el acceso a nuestras necesidades como un derecho.</span>
+                                        Bajo el imperialismo capitalista, nuestras necesidades 
+                                        se vuelven inaccesibles debido al capital y sus intereses, 
+                                        sin dar importancia a nuestra salud colectiva.
+                                    </span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">We oppose the institutions that maintain these necessities’ 
+                                        status as a commodity.</span> These institutions include agribusiness, 
+                                        the police, the government, and their respective cronies. 
+                                        Anyone and any institution staked in the manufactured inaccessibility 
+                                        of these resources must be confronted.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Nos oponemos a las instituciones 
+                                        que mantienen a nuestras necesidades como mercancías. </span>
+                                        Estas instituciones incluyen el agronegocio, la policía, el gobierno 
+                                        y sus respectivos compinches. Cualquier persona o institución que 
+                                        participe en la inaccesibilidad artificial de estos recursos debe ser encarada.
+                                    </span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">We organize ourselves horizontally and equitably.</span>
+                                        We practice <span style="font-weight:bold;">consensus</span> and 
+                                        <span style="font-weight:bold;">collective decision-making</span> 
+                                        as our main navigating frameworks. We are collectively empowered to make decisions, 
+                                        determine structureis, and assert stewardship over the work.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Nos organizamos de manera horizontal y equitativa.</span>
+                                        Practicamos el consenso y la toma de decisiones colectiva como nuestros principales
+                                        marcos de navegación. Estamos facultados colectivamente para tomar decisiones,
+                                        determinar estructuras y afirmar la administración sobre el trabajo.
+                                    </span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">We practice solidarity, not service nor charity.</span>
+                                        Our primary and sole reason for being involved in this effort is because we understand our need to be.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Practicamos la solidaridad, no el servicio ni la caridad.</span>
+                                        Nuestra principal y única razón para estar involucrados en este esfuerzo
+                                        es porque entendemos nuestra necesidad de estarlo.
+                                    </span>
+                                </p> 
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">We fight alongside and center the 
+                                        most marginalized in our work.</span> This includes black, brown, 
+                                        indigenous, queer, trans, differently-abled, and undocumented folks 
+                                        in and out of our community.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Luchamos juntos y centramos en 
+                                        nuestro trabajo a los más marginados.</span> Esto incluye personas 
+                                        negras, indígenas, queer, trans, discapacitadas, 
+                                        indocumentadas dentro y fuera de nuestra comunidad.
+                                    </span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="eng lang-text active">
+                                        <span style="font-weight:bold;">We are creating a new, 
+                                        just world - one of anti-repression and non-disposability.</span>
+                                        It is our collective responsibility to embody and struggle towards these points of 
+                                        unity in our creation of a just world - understanding that we must care 
+                                        for each other’s health and well-being and are able 
+                                        to do so in a way that no entity can replace.
+                                    </span>
+                                    <span class="span lang-text">
+                                        <span style="font-weight:bold;">Estamos creando un mundo 
+                                        nuevo y justo, uno de antirrepresión y no desechable.</span>
+                                        Es nuestra responsabilidad colectiva luchar por estos puntos de unidad en 
+                                        nuestra creación de un mundo justo, nuestra revolución. 
+                                        Entendemos que la salud y el bienestar de nuestra comunidad son 
+                                        responsabilidad nuestra y que ninguna institución o organización 
+                                        puede sustituir el cuidado y atención que les debemos unes a otres. 
+                                    </span>
+                                </p>
+                            </li>
+                        </ol>                    
                     </div>
                 </div>
 
