add intro and conculsion to POUs

--- a/about.html
+++ b/about.html
@@ -229,6 +229,15 @@ categories: about
                     </div>
 
                     <div id="points-of-unity" class="collapse about-content">
+                        <p>
+                            <span class="eng lang-text active">
+                                BAM’s Points Of Unity provide a concrete framework and how BAM will be organized and what BAM is organized towards. The points are meant to be accepted by all members - it is not necessary to agree with them. This allows for the points to continuously develop towards a just ideal. We encourage critique and questioning to inform this development. The points are not constraints BAM must navigate; the points are BAM members’ first line of tools to collectively bring forth and sustain solutions.
+                            </span>
+                            <span class="span lang-text">
+                                Los Puntos de Unidad de BAM proporcionan un marco concreto de cómo se organizará BAM y hacia qué objetivos se organiza BAM. Los puntos están destinados a ser aceptados por todos los miembros; no es necesario estar de acuerdo con ellos. Esto permite que los puntos se desarrollen continuamente hacia un ideal justo. Invitamos preguntas y críticas. Estos puntos no son restricciones que BAM debe navegar; estos puntos son la primera línea de herramientas de los miembros de BAM para generar y sostener soluciones colectivamente.
+                            </span>
+                        </p>
+                        <hr/>
                         <ol>
                             <li>
                                 <p>
@@ -404,7 +413,16 @@ categories: about
                                     </span>
                                 </p>
                             </li>
-                        </ol>                    
+                        </ol>
+                        <hr/>
+                        <p>
+                            <span class="eng lang-text active">
+                                The above Points of Unity provide the organization a functional basis for principled critique both within the organization and externally—as well as a guideline for receiving critique. Through critique and democracy, we put our Points of Unity— our program and our principles—into practice. Members are expected to accept these points of unity, but agreement is not mandatory. Through participatory democracy and debate we can decide as a collective to revise or add onto these points.
+                            </span>
+                            <span class="span lang-text">
+                                Los Puntos de Unidad nos brindan una base funcional para la crítica de principios tanto dentro de la organización como externamente, así como una guía para recibir críticas. A través de la crítica y la democracia, ponemos en práctica nuestros Puntos de Unidad, nuestro programa y nuestros principios. Se espera que los miembros acepten estos puntos de unidad, pero el acuerdo no es obligatorio. A través de la democracia participativa y el debate, podemos decidir como colectivo revisar o agregar a estos puntos.
+                            </span>
+                        </p>
                     </div>
                 </div>
 
